# cake

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  cake.cpp
src/command/: CMakeLists.txt  command.cpp  command.hpp
src/commands/: command.hpp
src/comment/: CMakeLists.txt  comment.hpp  skip.cpp
src/expansion/: CMakeLists.txt  expansion.cpp  expansion.hpp
src/options/: CMakeLists.txt  options.cpp  options.hpp
src/parser/: CMakeLists.txt  expand.cpp  parser.cpp  parser.hpp
src/rules/: CMakeLists.txt  from_line.cpp  rule.cpp  rule.hpp
src/variables/: CMakeLists.txt  from_line.cpp  variable.cpp  variable.hpp
tests/: CMakeLists.txt  test_command.cpp  test_expansion.cpp  test_parser.cpp  test_rules.cpp  test_variables.cpp
tests/makefiles/: basic  multi_rules  multi_vars
